--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="col-md-4">
                     <div class="blance-status withdraw">
                         <h5>Withdraw</h5>
-                    <h2>$ 00</h2>
+                    <h2>$ <span id="pre-withdraw">00</span></h2>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -54,9 +54,9 @@
                 <div class="col-md-6">
                     <div class="login-area">
                         <h4> Withdraw</h4>
-                        <input type="text" class="form-control" placeholder=" $ ammount you want to WITHDRAW">
+                        <input id="withdraw-input" type="text" class="form-control" placeholder=" $ ammount you want to WITHDRAW">
                         <br>
-                        <button class=" btn btn-success"> Withdraw </button>
+                        <button id="withdraw-button" class=" btn btn-success"> Withdraw </button>
                     </div>
                 </div>
             </div>
